--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,900;1,700&display=swap");
 
 * {
   padding: 0;
@@ -8,19 +8,20 @@
 
 :root {
   --btn-width: 55px;
-  --text-black: #212529;
+  --text-black: #1f271b;
+  --text-faded: #1f271bdf;
 }
 
 body {
   font-size: 18px;
-  font-family: Inter, Helvetica, sans-serif;
+  font-family: Roboto, sans-serif;
 
   color: var(--text-black);
-  background: black;
+  background: #1f271b;
 }
 
 .container {
-  height: 100dvh;
+  height: 100vh;
 
   display: flex;
   align-items: center;
@@ -28,17 +29,15 @@ body {
 }
 
 .calculator {
+  height: calc(var(--btn-width) * 11);
+
   display: grid;
 
-  grid-template-columns: var(--btn-width) var(--btn-width) var(--btn-width) var(
-      --btn-width
-    );
+  grid-template-columns: repeat(4, var(--btn-width));
 
-  grid-template-rows:
-    var(--btn-width) var(--btn-width) var(--btn-width) var(--btn-width)
-    var(--btn-width) var(--btn-width) var(--btn-width) var(--btn-width);
+  grid-template-rows: repeat(9, var(--btn-width));
 
-  background: gainsboro;
+  background: #f3fcf0;
 
   padding: 20px 20px;
   border-radius: 20px;
@@ -48,11 +47,21 @@ body {
   grid-column: 1/-1;
   grid-row: 1;
 
-  font-size: 0.75rem;
+  font-size: 1rem;
+  margin-bottom: 20px;
+
+  text-align: center;
+
+  align-self: center;
+
+  color: var(--text-faded);
+
+  font-size: 1.1rem;
+  text-transform: uppercase;
 }
 
 .screen {
-  height: calc(var(--btn-width) * 2);
+  height: calc(var(--btn-width) * 3);
 
   display: flex;
   align-items: center;
@@ -61,14 +70,14 @@ body {
   grid-column: 1/-1;
   grid-row: 2;
 
-  background-color: var(--text-black);
+  background-color: var(--text-faded);
 
   border-radius: 5px;
 }
 
 .screen__inner {
-  height: 80%;
-  width: 90%;
+  height: 92.5%;
+  width: 95%;
 
   background-color: white;
 
@@ -76,15 +85,17 @@ body {
 }
 
 .screen__inner__input {
-  margin-top: 20%;
-
   text-align: end;
+  height: 2rem;
 
-  font-size: 1.1rem;
+  padding: 0 10px;
+
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
 .buttons {
-  grid-row: 4;
+  grid-row: 5;
   display: grid;
 
   grid-template-columns: var(--btn-width) var(--btn-width) var(--btn-width) var(
@@ -93,6 +104,8 @@ body {
   grid-template-rows: var(--btn-width) var(--btn-width) var(--btn-width) var(
       --btn-width
     );
+
+  margin-top: 50px;
 }
 
 .buttons__operators--horizontal {
@@ -121,29 +134,48 @@ body {
 }
 
 .btn--grey {
-  background: grey;
+  font-family: "Roboto";
+  font-weight: 500;
+
+  background: #04151f;
+  color: #b4b9bc;
 }
 
 .btn--orange {
-  background: orange;
+  font-family: "Roboto";
+  font-weight: 500;
+
+  background: #ffd23f;
+  color: #4c3f13;
 }
 
 .btn {
   width: var(--btn-width);
   aspect-ratio: 1/1;
 
-  border-radius: 7px;
+  border-radius: 100px;
   border: 0;
 
   font-size: 1.25rem;
 
-  transition: 0.02s;
+  transition: 0.15s;
 }
 
 .btn:hover {
-  background: green;
+  opacity: 0.6;
 }
 
 .btn:active {
-  opacity: 0.8;
+  opacity: 0.9;
+}
+
+[data-previous-operand] {
+  margin-top: 20px;
+  font-size: 1rem;
+  color: #8f7521;
+}
+
+[data-current-operand] {
+  height: auto;
+  font-size: 1.5rem;
 }
